<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    //on met d'abord l'image du canapé
    <ImageView
        android:id="@+id/marron"
        android:layout_width="match_parent"
        android:layout_height="410dp"
        android:src="@mipmap/canape_cuir_foreground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0"/>

    <ImageView
        android:id="@+id/arrows"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_arrow_back_black_24dp"
        android:layout_margin="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.2"/>

    <ImageView
        android:id="@+id/market"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_shopping_cart_black_24dp"
        android:layout_marginLeft="320dp"
        android:layout_marginTop="20dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/arrows"
       />

    <ImageView
        android:id="@+id/letter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_looks_3_black_24dp"
        app:layout_constraintHorizontal_bias="0.65"
        app:layout_constraintLeft_toRightOf="@id/market"
        app:layout_constraintRight_toRightOf="@id/market"
        app:layout_constraintTop_toTopOf="@id/market" />

    <TextView
        android:id="@+id/titre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/canape"
        android:textSize="25dp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:fontFamily="sans-serif"
        android:layout_marginLeft="30dp"
        android:layout_marginBottom="100dp"
        app:layout_constraintLeft_toLeftOf="@id/marron"
        app:layout_constraintBottom_toBottomOf="@id/marron"

        />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="410dp"
        android:background="@drawable/round_outline"
        android:layout_marginTop="320dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        >
        <TextView
            android:id="@+id/siege"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Sièges"
            android:textSize="15dp"
            android:textStyle="bold"
            android:textColor="@color/pink"
            android:fontFamily="sans-serif"
            android:layout_margin="20dp"
            />

        <TextView
            android:id="@+id/nom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/siege"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"
            android:fontFamily="sans-serif"
            android:text="@string/canape"
            android:textColor="@color/blue"
            android:textSize="20dp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/prix"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="30000.0 FCFA"
            android:textSize="15dp"
            android:textStyle="normal"
            android:textColor="@color/pink"
            android:fontFamily="sans-serif"
            android:layout_alignParentRight="true"
            android:layout_marginRight="7dp"
            android:layout_marginTop="67dp"
            />
        <view
            android:id="@+id/bar"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_below="@id/nom"
            android:layout_marginBottom="0dp"
            android:background="#000000">

        </view>
        <TextView
            android:id="@+id/nomp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Votre produit"
            android:textSize="12dp"
            android:textStyle="normal"
            android:fontFamily="sans-serif"
            android:layout_below="@id/bar"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="1dp"
            />
        <TextView
            android:id="@+id/quantite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Quantite"
            android:textSize="12dp"
            android:textStyle="normal"
            android:fontFamily="sans-serif"
            android:layout_below="@id/bar"
            android:layout_centerInParent="true"
            android:layout_marginTop="1dp"
            />
        <TextView
            android:id="@+id/prixT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Prix Total"
            android:textSize="12dp"
            android:textStyle="normal"
            android:fontFamily="sans-serif"
            android:layout_below="@id/bar"
            android:layout_alignParentRight="true"
            android:layout_marginTop="1dp"
            android:layout_marginRight="7dp"
            />
        <TextView
            android:id="@+id/nomproduit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/canape"
            android:textSize="12dp"
            android:textStyle="normal"
            android:fontFamily="sans-serif"
            android:layout_below="@id/nomp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_remove_circle_outline_black_24dp"
            android:layout_toRightOf="@id/nomproduit"
            android:layout_below="@id/quantite"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="35dp"
            />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_add_circle_outline_black_24dp"
            android:layout_toRightOf="@id/nomproduit"
            android:layout_below="@id/quantite"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="75dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/un"
            android:textSize="12dp"
            android:textStyle="normal"
            android:fontFamily="sans-serif"
            android:layout_below="@id/quantite"
            android:layout_centerInParent="true"
            android:layout_marginTop="10dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="30000.0 FCFA"
            android:textSize="12dp"
            android:textStyle="normal"
            android:fontFamily="sans-serif"
            android:layout_below="@id/prixT"
            android:layout_alignParentRight="true"
            android:layout_marginTop="10dp"
            android:layout_marginRight="7dp"
            />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/ajout"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@id/nomproduit"
            android:layout_marginTop="10dp"
            android:background="@color/pink">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/panier"
                android:textColor="@color/white"
                android:textSize="12dp"
                android:textStyle="normal"
                android:fontFamily="sans-serif"
                android:layout_marginLeft="150dp"
                android:layout_marginTop="15dp"
                />

        </androidx.appcompat.widget.LinearLayoutCompat>
        <TextView
            android:id="@+id/genre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/produit"
            android:textColor="@color/black"
            android:textSize="12dp"
            android:textStyle="normal"
            android:fontFamily="sans-serif"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_below="@id/ajout"
            />
        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/cuirBlanc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/round_outline"
            android:layout_below="@id/genre"
            android:layout_marginLeft="5dp"
            android:orientation="vertical">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@mipmap/canape_blanc_foreground"/>

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/siege"
                android:textColor="@color/green"
                android:textSize="12dp"
                android:textStyle="normal"
                android:fontFamily="sans-serif"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="0dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/canape"
                android:textColor="@color/black"
                android:textSize="12dp"
                android:textStyle="normal"
                android:fontFamily="sans-serif"

                android:layout_marginLeft="5dp"

                />
            <TextView
                android:id="@+id/siegeF"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/realisateur"
                android:textSize="10dp"
                android:textStyle="normal"
                android:fontFamily="sans-serif"
                android:layout_marginLeft="5dp"

                />
            <TextView
                android:id="@+id/montantP"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/montant2"
                android:textSize="12dp"
                android:textStyle="normal"
                android:fontFamily="sans-serif"
                android:layout_marginLeft="5dp"

                />



        </androidx.appcompat.widget.LinearLayoutCompat>

//construction du deuxieme elemnt du footer canapé en cuir marron

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/cuirMaron"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/round_outline"
            android:layout_below="@id/genre"
            android:layout_toRightOf="@id/cuirBlanc"
            android:layout_marginLeft="5dp"
            android:orientation="vertical">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@mipmap/canape_cuir_foreground"
                android:background="@drawable/round_outline"/>


            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/siege"
                android:textColor="@color/green"
                android:textSize="12dp"
                android:textStyle="normal"
                android:fontFamily="sans-serif"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="0dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/canape"
                android:textColor="@color/black"
                android:textSize="12dp"
                android:textStyle="normal"
                android:fontFamily="sans-serif"
                android:layout_marginLeft="5dp"

                />
            <TextView
                android:id="@+id/siegeF1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/realisateur"
                android:textSize="10dp"
                android:textStyle="normal"
                android:fontFamily="sans-serif"
                android:layout_marginLeft="5dp"

                />
            <TextView
                android:id="@+id/montantP1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/monyant1"
                android:textSize="12dp"
                android:textStyle="normal"
                android:fontFamily="sans-serif"
                android:layout_marginLeft="5dp"

                />



        </androidx.appcompat.widget.LinearLayoutCompat>

        //construction du 3ème element du footer

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/cuirBois"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/round_outline"
            android:layout_below="@id/genre"
            android:layout_toRightOf="@id/cuirMaron"
            android:layout_marginLeft="5dp"
            android:orientation="vertical">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@mipmap/canape_cuir_noir_foreground"
                android:background="@drawable/round_outline"
                />


            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/siege"
                android:textColor="@color/green"
                android:textSize="12dp"
                android:textStyle="normal"
                android:fontFamily="sans-serif"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="0dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/canapeN"
                android:textColor="@color/black"
                android:textSize="12dp"
                android:textStyle="normal"
                android:fontFamily="sans-serif"
                android:layout_marginLeft="5dp"

                />
            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/realisateur"
                android:textSize="10dp"
                android:textStyle="normal"
                android:fontFamily="sans-serif"
                android:layout_marginLeft="5dp"

                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/montant2"
                android:textSize="12dp"
                android:textStyle="normal"
                android:fontFamily="sans-serif"
                android:layout_marginLeft="5dp"

                />



        </androidx.appcompat.widget.LinearLayoutCompat>





    </RelativeLayout>





</androidx.constraintlayout.widget.ConstraintLayout>